--- a/index.html
+++ b/index.html
@@ -106,9 +106,15 @@
         </div>
       </div>
     </main>
-    <img src="img/eclipse.png" alt="eclipse" class="eclipse1" />
-    <img src="img/eclipse.png" alt="eclipse" class="eclipse2" />
-    <img src="img/footer-img.png" alt="Mouse" class="footer-img" />
+    <div class="mouse-pic">
+      <img src="img/eclipse.png" alt="eclipse" class="eclipse1" />
+    </div>
+    <div class="mouse-pic">
+      <img src="img/eclipse.png" alt="eclipse" class="eclipse2" />
+    </div>
+    <div class="mouse-pic">
+      <img src="img/footer-img.png" alt="Mouse" class="footer-img" />
+    </div>
     <script src="js/aos.js"></script>
     <script src="js/main.js"></script>
   </body>
